--- a/drip-irrigation.html
+++ b/drip-irrigation.html
@@ -113,27 +113,8 @@
 <section class="container" style="padding:70px 0;">
     <div style="max-width:900px; margin:auto;">
 
-      
-
-        <p>
-            At <strong>Aaron Agronomy Services</strong>, we prioritize efficient and sustainable farming
-            practices, and our commitment to excellence is reflected in our expertise in drip irrigation systems.
-        </p>
-<img src="drip.png" alt="Drip Irrigation System"
-             style="width:100%; border-radius:12px; margin-bottom:30px;">
-        <p>
-            Drip irrigation is a water-efficient method that delivers precise amounts of water directly
-            to the root zones of plants, promoting optimal growth while minimizing water wastage.
-        </p>
-
-        <p>
-            Our experienced team designs and installs customized drip irrigation systems tailored
-            to the specific needs of your farm. Whether you are a small-scale farmer or managing a
-            large agricultural enterprise, we provide reliable and cost-effective solutions.
-        </p>
-
-        <a href="contact.html" class="btn" style="margin-top:20px;">Contact Us</a>
-    <h2>Drip Irrigation Packages</h2>
+    
+    <section-title>Drip Irrigation Packages</section-title>
         <p style="text-align:center; margin-bottom:30px;">
             Prices are classified based on acreage and number of lines per bed.
         </p>
