--- a/drip-irrigation.html
+++ b/drip-irrigation.html
@@ -114,7 +114,7 @@
     <div style="max-width:900px; margin:auto;">
 
     
-    <section-title>Drip Irrigation Packages</section-title>
+    <h1><b>DRIP IRRIGATION PACKAGES</b></h1>
         <p style="text-align:center; margin-bottom:30px;">
             Prices are classified based on acreage and number of lines per bed.
         </p>
