--- a/contact.html
+++ b/contact.html
@@ -556,7 +556,7 @@ input, select, textarea {
                 <ul id="navMenu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="packages.html">Services</a></li>
                     <li><a href="farm-assessment.html">Farm Assessment</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
@@ -1106,3 +1106,4 @@ input, select, textarea {
     </script>
 </body>
 </html>
+
