--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul id="navMenu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="packages.html">Services</a></li>
+                    <li><a href="packages.html">Packages</a></li>
                     
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -279,7 +279,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="packages.html">ackages</a></li>
                         <li><a href="farm-assessment.html">Farm Assessment</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -321,6 +321,7 @@
 </body>
 
 </html>
+
 
 
 
