--- a/products.html
+++ b/products.html
@@ -68,7 +68,7 @@
                 <ul id="navMenu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="packages.html">Services</a></li>
+                    <li><a href="packages.html">Packages</a></li>
                    
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -169,7 +169,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="packages.html">Services</a></li>
                         <li><a href="farm-assessment.html">Farm Assessment</a></li>
                     </ul>
                 </div>
@@ -194,6 +194,7 @@
 </body>
 
 </html>
+
 
 
 
