--- a/about.html
+++ b/about.html
@@ -245,7 +245,7 @@
                 <ul id="navMenu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="packages.html">Services</a></li>
+                    <li><a href="packages.html">Packages</a></li>
 
                     <li><a href="about.html" class="active">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -619,7 +619,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="packages.html">Services</a></li>
                         <li><a href="farm-assessment.html">Farm Assessment</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -650,6 +650,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
