--- a/packages.html
+++ b/packages.html
@@ -113,8 +113,8 @@
     <section class="hero" style="background: linear-gradient(rgba(26, 71, 42, 0.9), rgba(26, 71, 42, 0.95)),url(services.jpeg); min-height: 40vh; padding-top: 120px;">
         <div class="container">
             <div class="hero-content">
-                <h1>Our Services</h1>
-                <p>Comprehensive agronomy services to maximize your farming productivity and profitability</p>
+                <h1>Our Packages</h1>
+                <p>Comprehensive agronomy packages to maximize your farming productivity and profitability</p>
             </div>
         </div>
     </section>
@@ -305,6 +305,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
