--- a/products.html
+++ b/products.html
@@ -69,7 +69,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="packages.html">Packages</a></li>
-                   
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="LOGINS.html" class="btn btn-small">Log in</a></li>
@@ -194,6 +194,7 @@
 </body>
 
 </html>
+
 
 
 
