--- a/about.html
+++ b/about.html
@@ -246,7 +246,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="packages.html">Packages</a></li>
-
+                     <li><a href="services.html">Services</a></li>
                     <li><a href="about.html" class="active">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="LOGINS.html" class="btn btn-small">Log in</a></li>
@@ -650,6 +650,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
