--- a/contact.html
+++ b/contact.html
@@ -557,6 +557,7 @@ input, select, textarea {
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="packages.html">Packages</a></li>
+                     <li><a href="services.html">Services</a></li>
                     <li><a href="farm-assessment.html">Farm Assessment</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
@@ -1106,5 +1107,6 @@ input, select, textarea {
     </script>
 </body>
 </html>
+
 
 
