--- a/drip-irrigation.html
+++ b/drip-irrigation.html
@@ -401,6 +401,7 @@
         <div class="packages-container">
             <!-- 1 Acre Package -->
             <div class="package-card">
+                <div class="best-value">POPULAR</div>
                 <div class="package-header">
                     <div class="package-size">1 Acre</div>
                     <div class="package-area">(4100 sqm)</div>
