--- a/products.html
+++ b/products.html
@@ -101,11 +101,8 @@
                     <div class="product-info">
                         <h3>Grade A Pixies</h3>
                         <p class="product-description">Premium quality, large size pixies with perfect color and texture. Ideal for export and high-end markets.</p>
-                        <div class="price-item">
-                            <span class="price-item-name">Per Kg</span>
-                            <span class="price-item-price">150 KSh</span>
-                        </div>
-                        <a href="contact.html" class="btn" style="margin-top: 20px;">Order Now</a>
+                        
+                        <a href="contact.html" class="btn" style="margin-top: 20px;">KSH 150</a>
                     </div>
                 </div>
                 
@@ -194,6 +191,7 @@
 </body>
 
 </html>
+
 
 
 
