--- a/contact.html
+++ b/contact.html
@@ -950,6 +950,7 @@ input, select, textarea {
     </footer>
 
     <script src="js/main.js"></script>
+     <script src="js/contact.js"></script>
     <script>
         // Contact Form Validation and Submission
         document.addEventListener('DOMContentLoaded', function() {
@@ -1107,6 +1108,7 @@ input, select, textarea {
     </script>
 </body>
 </html>
+
 
 
 
