--- a/contact.html
+++ b/contact.html
@@ -950,9 +950,11 @@ input, select, textarea {
     </footer>
 
     <script src="js/main.js"></script>
-     <script src="js/contact.js"></script>
+     <script src="js/contact.js" defer></script>
+
 </body>
 </html>
+
 
 
 
